footer overlapying issue

--- a/src/components/NapaLounge/NapaLounge.module.scss
+++ b/src/components/NapaLounge/NapaLounge.module.scss
@@ -9,7 +9,7 @@
   transition: 1s ease;
   display: flex;
   flex-direction: column;
-  @media (max-width: 1199px) {
+  @media (max-width: 1279px) {
     height: auto;
     min-height: auto;
   }
@@ -17,7 +17,7 @@
     height: 100%;
     padding-right: 0;
     padding-bottom: 5rem;
-    @media (max-width: 1199px) {
+    @media (max-width: 1279px) {
       padding-bottom: 15rem;
       padding-top: 2rem;
     }
