--- a/src/components/NftMarketplaceSection/NftMarketplaceSection.module.scss
+++ b/src/components/NftMarketplaceSection/NftMarketplaceSection.module.scss
@@ -9,7 +9,7 @@
   height: 100vh;
   width: 100%;
   @include flex-column-between;
-  @media (max-width: 1199px) {
+  @media (max-width: 1279px) {
     height: auto;
   }
   .nft {
