--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -30,7 +30,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  @media (max-width: 1199px) {
+  @media (max-width: 1279px) {
     height: auto;
     min-height: auto;
   }
